# cpp4r

./: .gitignore  README.md
book/: .RData  .Rhistory  README.md  __latexindent_temp.tex  _bookdown.yml  _output.yml  enum.Rmd  hello.Rmd  index.Rmd  preamble.tex
book/.Rproj.user/609EC3C6/: rmd-outputs
book/.Rproj.user/609EC3C6/pcs/: files-pane.pper  windowlayoutstate.pper
book/.Rproj.user/609EC3C6/sources/prop/: 142C6762  2B676194  4CD4812F  D5AF4282  E8261E52  INDEX
book/.Rproj.user/609EC3C6/viewer_history/: history_entries
book/.Rproj.user/609EC3C6/viewer_history/viewhtml22dff356c0c0a/: index.html
book/.Rproj.user/shared/notebooks/: paths
book/.Rproj.user/shared/notebooks/2BD1D88F-01-intro/1/609EC3C679655CFA/: chunks.json
book/.Rproj.user/shared/notebooks/2BD1D88F-01-intro/1/609EC3C6FC02F9E4/: chunks.json
book/.Rproj.user/shared/notebooks/2BD1D88F-01-intro/1/s/: chunks.json
book/.Rproj.user/shared/notebooks/2BD1D88F-01-intro/1/s/cdd6kcdcjcahq/: 000003.html
book/.Rproj.user/shared/notebooks/2BD1D88F-01-intro/1/s/cp8h3efjok8wz/: 000002.csv
book/.Rproj.user/shared/notebooks/6D49CEF6-02-literature/1/609EC3C697B9F095/: chunks.json
book/.Rproj.user/shared/notebooks/A5CEF4F3-index/1/609EC3C679655CFA/: chunks.json
docs/: about-this-book.html  audiotags.epub  audiotags.tex  control-flow.html  cpp4r.epub  cpp4r.fdb_latexmk  cpp4r.fls  cpp4r.tex  data-types.html  enumerations.html  exercise.html  functions.html  hello-c.html  hello-data-types-and-variables.html  hello-data-types.html  hello-world.html  hello.html  index.html  pointers-and-references.html  pointers.html  prerequisites.html  reading-this-book-html.html  reading-this-book.html  reference-keys.txt  search_index.json  the-plain-enum.html  variables.html
r2cpp/: CMakeLists.txt  README.md
r2cpp/pet/: pet.cpp
r2cpp/pet/pet-macro/: Cargo.toml
r2cpp/pet/pet-macro/src/: main.rs
r2cpp/template-1/: main.cpp
r2cpp/template-1/generics-1/: Cargo.toml
r2cpp/template-1/generics-1/src/: main.rs
src/: CMakeLists.txt  enum.cpp  enum_class.cpp  main.cpp  main.rs  move.cpp
src/Adder/: Adder.cpp  Adder.h  CMakeLists.txt
src/class/: complex-number.cpp
src/class/pet/: Cargo.toml
src/class/pet/src/: main.rs
src/hello/: a.out  controlflow.cpp  hellopointers.cpp  hellotypes.cpp  helloworld.cpp  pointers_and_references.cpp  variables.cpp
